# tasker-core

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .mcp.json.example  .tasker-ctl.toml  AGENTS.md  AUTHORS.md  Brewfile  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  coverage-thresholds.json  plan.md
crates/tasker-runtime/: Cargo.toml  Makefile.toml
crates/tasker-runtime/src/: cache.rs  lib.rs  provider.rs
crates/tasker-runtime/src/adapters/: http.rs  messaging.rs  mod.rs  postgres.rs  registry.rs  sql_gen.rs
crates/tasker-runtime/src/context/: mod.rs
crates/tasker-runtime/src/pool_manager/: lifecycle.rs  metrics.rs  mod.rs
crates/tasker-runtime/src/sources/: mod.rs  resolver.rs  sops.rs  static_config.rs
crates/tasker-runtime/tests/: adapter_registry_tests.rs  definition_resolver_tests.rs  http_adapter_tests.rs  pool_manager_tests.rs  runtime_provider_tests.rs  source_integration_tests.rs  sql_gen_tests.rs  static_config_source_tests.rs
crates/tasker-sdk/: Cargo.toml  Makefile.toml  README.md
crates/tasker-sdk/src/: grammar_query.rs  lib.rs
crates/tasker-sdk/src/codegen/: handler.rs  handler_templates.rs  mod.rs  rust_gen.rs  scaffold.rs  schema.rs  typescript.rs
crates/tasker-sdk/src/composition_validator/: mod.rs  tests.rs
crates/tasker-sdk/src/operational/: client_factory.rs  confirmation.rs  enums.rs
crates/tasker-sdk/src/schema_diff/: mod.rs
crates/tasker-sdk/src/schema_inspector/: mod.rs
crates/tasker-sdk/src/template_engine/: engine.rs  metadata.rs
crates/tasker-sdk/src/template_generator/: mod.rs
crates/tasker-sdk/src/template_parser/: mod.rs
crates/tasker-sdk/src/template_validator/: mod.rs
crates/tasker-sdk/src/visualization/: mod.rs  render.rs  task_visualize.rs  template_visualize.rs
crates/tasker-secure/: Cargo.toml  Makefile.toml  README.md
crates/tasker-secure/src/: lib.rs
crates/tasker-secure/tests/: chained_provider_test.rs  config_string_test.rs  env_provider_test.rs  http_handle_test.rs  in_memory_resource_test.rs  postgres_handle_test.rs  resource_definition_test.rs  resource_handle_test.rs  resource_registry_test.rs  resource_types_test.rs  secret_value_test.rs  sops_provider_test.rs
docs/: README.md  (+3 more)
tasker-cli/: Cargo.toml  README.md
tasker-cli/src/: main.rs
tasker-cli/src/commands/: config.rs  dlq.rs  docs.rs  mod.rs  system.rs  task.rs  worker.rs
tasker-cli/src/docs/: mod.rs  templates.rs
tasker-client/: Cargo.toml  README.md
tasker-client/src/: config.rs  lib.rs  profile_manager.rs  transport.rs
tasker-client/src/api_clients/: CLAUDE.md  orchestration_client.rs
tasker-client/src/grpc_clients/: CLAUDE.md  common.rs  conversions.rs
tasker-client/tests/common/: mod.rs
tasker-ctl/: Cargo.toml  Makefile.toml  README.md
tasker-ctl/src/: CLAUDE.md  main.rs
tasker-ctl/src/cli_config/: loader.rs  mod.rs  unified.rs
tasker-ctl/src/codegen/: handler.rs  handler_templates.rs  mod.rs  python.rs  ruby.rs  rust_gen.rs  schema.rs  typescript.rs  typescript_zod.rs
tasker-ctl/src/commands/: CLAUDE.md  auth.rs  config.rs  dlq.rs  docs.rs  generate.rs  init.rs  mod.rs  plugin.rs  profile.rs  task.rs  template.rs  worker.rs
tasker-ctl/src/docs/: CLAUDE.md  templates.rs
tasker-ctl/src/output/: mod.rs
tasker-ctl/src/plugins/: mod.rs
tasker-ctl/src/remotes/: error.rs
tasker-ctl/src/template_engine/: engine.rs  filters.rs  metadata.rs  mod.rs
tasker-ctl/templates/: annotated-config.toml  init-unified.toml  profile-init.toml
tasker-ctl/templates/codegen/: python_models.py  python_tests.py  ruby_structs.rb  ruby_tests.rb  rust_handlers.rs  rust_structs.rs  rust_tests.rs  typescript_interfaces.ts  typescript_schemas.ts  typescript_tests.ts
tasker-ctl/tests/: codegen_integration_test.rs  config_commands_test.rs  handler_codegen_integration_test.rs  plugin_integration_test.rs  profile_commands_test.rs  remote_integration_test.rs
tasker-grammar/: Cargo.toml  Makefile.toml
tasker-grammar/src/: lib.rs
tasker-grammar/src/capabilities/: mod.rs  transform.rs  validate.rs
tasker-grammar/src/expression/: tests.rs
tasker-grammar/src/types/: categories.rs  checkpoint.rs  composition.rs  declaration.rs  envelope.rs  error.rs  executor.rs  mod.rs  on_failure.rs  tests.rs  validation.rs
tasker-mcp/: Cargo.toml  Makefile.toml  README.md
tasker-mcp/src/: lib.rs  main.rs  server.rs  tier.rs
tasker-mcp/src/tools/: connected.rs  developer.rs  mod.rs  params.rs  write.rs
tasker-mcp/tests/: mcp_protocol_test.rs
tasker-sdk/: Cargo.toml  Makefile.toml  askama.toml
tasker-sdk/src/: lib.rs
tasker-sdk/src/codegen/: handler.rs  handler_templates.rs
tasker-sdk/src/operational/: mod.rs  responses.rs
tasker-sdk/src/schema_comparator/: mod.rs
tasker-sdk/src/schema_inspector/: mod.rs
tasker-sdk/src/template_engine/: loader.rs  mod.rs
tasker-sdk/src/template_validator/: mod.rs
tasker-sdk/src/visualization/: detail_table.rs  mermaid.rs  mod.rs  template_visualize.rs  types.rs
tasker-sdk/templates/codegen/: python_models.py  python_tests.py  rust_handlers.rs  scaffold_python_handlers.py  scaffold_python_tests.py  scaffold_rust_handlers.rs  scaffold_typescript_handlers.ts  typescript_tests.ts
tasker-tooling/: Cargo.toml  Makefile.toml  README.md  askama.toml
tasker-tooling/src/: lib.rs
tasker-tooling/src/codegen/: python.rs  ruby.rs  scaffold.rs  schema.rs
tasker-tooling/src/template_parser/: mod.rs
tasker-tooling/templates/codegen/: python_handlers.py  python_models.py  rust_structs.rs  rust_tests.rs  scaffold_python_handlers.py  scaffold_ruby_handlers.rb  scaffold_ruby_tests.rb  scaffold_rust_handlers.rs  scaffold_rust_tests.rs  scaffold_typescript_handlers.ts  scaffold_typescript_tests.ts  typescript_handlers.ts  typescript_tests.ts
workers/typescript/: .gitignore  AGENTS.md  Cargo.toml  Makefile.toml  README.md  biome.json  build.rs  deno.json  index.d.ts  index.js  package.json  tsconfig.json  tsup.config.ts
workers/typescript/src/: index.ts
workers/typescript/src-rust/: CLAUDE.md  bridge.rs  client_ffi.rs  dto.rs  lib.rs
(+1681 files in other folders)
