[package]
name = "tasker-ctl"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Command-line interface for the Tasker orchestration system"
readme = "README.md"
repository = "https://github.com/tasker-systems/tasker-core"
keywords = ["cli", "orchestration", "workflow", "task-management"]
categories = ["command-line-utilities"]

[[bin]]
name = "tasker-ctl"
path = "src/main.rs"

[dependencies]
# Workspace crates
tasker-client = { path = "../tasker-client", version = "=0.1.4" }
tasker-shared = { path = "../tasker-shared", version = "=0.1.4" }

# CLI framework
clap = { workspace = true, features = ["color", "derive", "env"] }

# Async runtime
tokio = { workspace = true }

# Serialization & config
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Date/time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Auth (key generation)
rsa = { workspace = true }
rand = { workspace = true }

# Validation
validator = { workspace = true }
regex = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Template rendering (compile-time Askama for docs + init templates)
askama = { workspace = true }

# Styled terminal output (auto-detects TTY, degrades gracefully when piped)
anstream = { workspace = true }
anstyle = { workspace = true }

# Plugin template engine (TAS-126: runtime templates for contrib plugins)
tera = { workspace = true }
heck = { workspace = true }
thiserror = { workspace = true }

# Remote template/config fetching (TAS-270)
toml_edit = { workspace = true }

[features]
default = []

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

# TAS-145: cargo-machete ignore list for tasker-ctl
# These dependencies ARE used but machete may not detect them:
# - rand: Used via rsa::rand_core::OsRng (transitive)
# - regex: Used in config commands
# - serde: Used via derive macros
# - validator: Used via Validate derive
[package.metadata.cargo-machete]
ignored = ["rand", "serde"]
