[package]
name = "tasker-grammar"
version = "0.1.6"
edition = "2021"
description = "Action grammar: expression evaluation, capability execution, composition validation and execution for Tasker workflows"
readme = "README.md"
repository = "https://github.com/tasker-systems/tasker-core"
license = "MIT"
keywords = ["grammar", "jq", "expression", "workflow", "orchestration"]
categories = ["data-structures", "compilers"]

[lib]
crate-type = ["rlib"]
name = "tasker_grammar"

[dependencies]
jaq-core = "2.1"
jaq-std = "2.1"
jaq-json = { version = "1.1", features = ["serde_json"] }
jsonschema = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
