[package]
name = "tasker-mcp"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "MCP server exposing Tasker capabilities to LLM agents and developer tools"
readme = "README.md"
repository = "https://github.com/tasker-systems/tasker-core"
keywords = ["mcp", "llm", "orchestration", "workflow", "ai"]
categories = ["development-tools"]

[[bin]]
name = "tasker-mcp"
path = "src/main.rs"

[lib]
name = "tasker_mcp"
path = "src/lib.rs"

[dependencies]
# Workspace crates
tasker-tooling = { path = "../tasker-tooling", version = "=0.1.6" }
tasker-shared = { path = "../tasker-shared", version = "=0.1.6" }
tasker-client = { path = "../tasker-client", version = "=0.1.6" }

# CLI argument parsing
clap = { workspace = true }

# MCP protocol
rmcp = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# JSON Schema generation for MCP tool parameters
schemars = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# MCP client + transport for integration tests
rmcp = { workspace = true, features = ["client"] }
futures = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["futures", "serde_yaml"]
