[package]
name = "tasker-secure"
version = "0.1.6"
edition = "2021"
description = "Strategy-pattern secrets resolution, resource lifecycle, and data protection for Tasker workflows"
repository = "https://github.com/tasker-systems/tasker-core"
license = "MIT"

[lib]
crate-type = ["rlib"]
name = "tasker_secure"

[features]
default = []
sops = ["dep:rops", "dep:serde_yaml"]
test-utils = []

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }

# Optional dependencies
rops = { version = "0.1", optional = true }
serde_yaml = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }

[lints]
workspace = true
