[package]
name = "tasker-ts"
version = "0.1.3"
edition = "2021"
rust-version = "1.77"
description = "TypeScript FFI bindings for tasker-core (napi-rs)"
readme = "AGENTS.md"
repository = "https://github.com/tasker-systems/tasker-core"
license = "MIT"
keywords = ["bun", "ffi", "napi", "tasker", "typescript", "workflow"]
categories = ["api-bindings", "development-tools::ffi"]
publish = false  # Internal crate, not published to crates.io

# TAS-145: Ignore false positives from cargo-machete
[package.metadata.cargo-machete]
ignored = [
  # Used in FFI layer but not detected by analysis
  "chrono",
  "dotenvy",
]

[lib]
crate-type = ["cdylib"]
name = "tasker_ts"
path = "src-rust/lib.rs"

[dependencies]
# napi-rs core (TAS-290: replaces koffi C FFI)
napi = { version = "3", features = ["napi9", "serde-json"] }
napi-derive = "3"
# Error handling
anyhow = { workspace = true }
# Time handling
chrono = { workspace = true }
# Environment variable loading
dotenvy = { workspace = true }
# Serialization (for internal conversions, NOT for FFI boundary)
serde = { workspace = true }
serde_json = { workspace = true }
# Core tasker libraries
tasker-shared = { path = "../../tasker-shared" }
tasker-worker = { path = "../../tasker-worker" }
# Error handling
thiserror = { workspace = true }
# Async runtime (needed for FFI blocking)
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
# Logging
tracing = { workspace = true }
# UUID generation and handling
uuid = { workspace = true }

[build-dependencies]
napi-build = "1"

[features]
default = []

[lints]
workspace = true
