[package]
name = "tasker-ts"
version = "0.1.4"
edition = "2021"
rust-version = "1.77"
description = "TypeScript FFI bindings for tasker-core (napi-rs)"
readme = "AGENTS.md"
repository = "https://github.com/tasker-systems/tasker-core"
license = "MIT"
keywords = ["bun", "ffi", "napi", "tasker", "typescript", "workflow"]
categories = ["api-bindings", "development-tools::ffi"]
publish = false  # Internal crate, not published to crates.io

# TAS-145: Ignore false positives from cargo-machete
[package.metadata.cargo-machete]
ignored = [
  "dotenvy",     # Used via dotenvy::dotenv() in bridge.rs bootstrap
  "napi-build",  # Used in build.rs (machete doesn't detect build-dependencies)
]

[lib]
crate-type = ["cdylib"]
name = "tasker_ts"
path = "src-rust/lib.rs"

[dependencies]
# napi-rs core (TAS-290: replaces koffi C FFI)
napi = { version = "3", features = ["napi9", "serde-json"] }
napi-derive = "3"
# Time handling
chrono = { workspace = true }
# Environment variable loading
dotenvy = { workspace = true }
# Serialization (serde-json feature on napi handles FFI boundary)
serde_json = { workspace = true }
# Core tasker libraries
tasker-shared = { path = "../../tasker-shared" }
tasker-worker = { path = "../../tasker-worker" }
# Error handling
thiserror = { workspace = true }
# Async runtime (needed for FFI blocking)
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
# Logging
tracing = { workspace = true }
# UUID generation and handling
uuid = { workspace = true }

[build-dependencies]
napi-build = "1"

[features]
default = []

[lints]
workspace = true
