[package]
name = "tasker-rb"
version = "0.1.4"
edition = "2021"
description = "Ruby bindings for tasker-core: High-performance workflow orchestration"
readme = "../../../../README.md"
repository = "https://github.com/tasker-systems/tasker-core"
license = "MIT"
keywords = ["bindings", "ffi", "magnus", "ruby", "worker"]
categories = ["api-bindings", "asynchronous"]

# TAS-145: Ignore false positives from cargo-machete
[package.metadata.cargo-machete]
ignored = [
  # Dev-dependencies
  "tasker-core",
  # Used in FFI layer but not detected by analysis
  "anyhow",
  "async-trait",
  "dotenvy",
  "once_cell",
  "serde_yaml",
  "sqlx",
  "thiserror",
  "workspace_tools",
]

[lib]
crate-type = ["cdylib"]
name = "tasker_rb"

[dependencies]
anyhow = "1.0"
# Async trait support for FrameworkIntegration
async-trait = "0.1"
# Time handling for Ruby Time ↔ Rust DateTime conversion
chrono = { version = "0.4.43", features = ["serde"] }
# Environment variable loading
dotenvy = "0.15"
# Ruby FFI
# NOTE: "embed" feature removed for M4 Pro compatibility (TAS-XXX)
# Static linking with embed causes segfaults on Apple M4 Pro due to
# ARM64 FEAT_LSE2 atomic instruction incompatibility
magnus = { version = "0.8" }
# Once Cell
once_cell = "1.19"
# Serde for serialization/deserialization
# NOTE: Pinned to match workspace — serde 1.0.220+ has breaking changes
serde = { version = "=1.0.228", features = ["derive", "std"] }
# Serialization for Ruby ↔ Rust data conversion
serde_json = "1.0"
serde_magnus = "0.10"
serde_yaml = "0.9"
# Database (needed for PgPool)
sqlx = { version = "0.8", features = [
  "bigdecimal",
  "chrono",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
# Core library dependencies
# Both path (for workspace builds) and version (for standalone/published builds).
# cargo publish strips the path field, leaving only the version for crates.io resolution.
# Version pins are updated by scripts/release/update-versions.sh during release-prepare.
tasker-shared = { path = "../../../../tasker-shared", version = "=0.1.4" }
tasker-worker = { path = "../../../../tasker-worker", version = "=0.1.4" }
# Error handling
thiserror = "2.0"
# Async runtime for blocking on futures in FFI
tokio = { version = "1.49", features = ["rt-multi-thread"] }
# Logging
tracing = "0.1"
# UUID generation for event bridge
uuid = { version = "1.11", features = ["serde", "v4", "v7"] }
# Project root detection
workspace_tools = { version = "0.11.0", features = ["full"] }

[dev-dependencies]
tasker-core = { package = "tasker-core", path = "../../../../", version = "=0.1.4" }

[features]
default = []
